// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`modules/manager/npm/extract/monorepo .extractPackageFile() updates internal packages 1`] = `
[
  {
    "deps": [
      {
        "depName": "@org/a",
        "isInternal": true,
      },
      {
        "depName": "@org/b",
        "isInternal": true,
      },
      {
        "depName": "@org/c",
      },
      {
        "depName": "foo",
      },
    ],
    "managerData": {
      "lernaJsonFile": "lerna.json",
      "lernaPackages": [
        "packages/*",
      ],
    },
    "packageFile": "package.json",
  },
  {
    "deps": [
      {
        "depName": "@org/b",
        "isInternal": true,
      },
      {
        "depName": "@org/c",
      },
      {
        "depName": "bar",
      },
    ],
    "hasWorkspaces": false,
    "managerData": {
      "hasPackageManager": undefined,
      "lernaClient": undefined,
      "lernaJsonFile": "lerna.json",
      "packageJsonName": "@org/a",
      "yarnZeroInstall": undefined,
    },
    "npmLock": undefined,
    "npmrc": undefined,
    "packageFile": "packages/a/package.json",
    "skipInstalls": undefined,
    "yarnLock": undefined,
  },
  {
    "hasWorkspaces": false,
    "managerData": {
      "hasPackageManager": undefined,
      "lernaClient": undefined,
      "lernaJsonFile": "lerna.json",
      "packageJsonName": "@org/b",
      "yarnZeroInstall": undefined,
    },
    "npmLock": undefined,
    "npmrc": undefined,
    "packageFile": "packages/b/package.json",
    "skipInstalls": undefined,
    "yarnLock": undefined,
  },
]
`;

exports[`modules/manager/npm/extract/monorepo .extractPackageFile() uses lerna package settings 1`] = `
[
  {
    "deps": [
      {
        "depName": "@org/a",
        "isInternal": true,
      },
      {
        "depName": "@org/b",
        "isInternal": true,
      },
      {
        "depName": "@org/c",
      },
      {
        "depName": "foo",
      },
    ],
    "managerData": {
      "lernaJsonFile": "lerna.json",
      "lernaPackages": [
        "packages/*",
      ],
    },
    "packageFile": "package.json",
  },
  {
    "deps": [
      {
        "depName": "@org/b",
        "isInternal": true,
      },
      {
        "depName": "@org/c",
      },
      {
        "depName": "bar",
      },
    ],
    "hasWorkspaces": false,
    "managerData": {
      "hasPackageManager": undefined,
      "lernaClient": undefined,
      "lernaJsonFile": "lerna.json",
      "packageJsonName": "@org/a",
      "yarnZeroInstall": undefined,
    },
    "npmLock": undefined,
    "npmrc": undefined,
    "packageFile": "packages/a/package.json",
    "skipInstalls": undefined,
    "yarnLock": undefined,
  },
  {
    "hasWorkspaces": false,
    "managerData": {
      "hasPackageManager": undefined,
      "lernaClient": undefined,
      "lernaJsonFile": "lerna.json",
      "packageJsonName": "@org/b",
      "yarnZeroInstall": undefined,
    },
    "npmLock": undefined,
    "npmrc": undefined,
    "packageFile": "packages/b/package.json",
    "skipInstalls": undefined,
    "yarnLock": undefined,
  },
]
`;

exports[`modules/manager/npm/extract/monorepo .extractPackageFile() uses yarn workspaces package settings with lerna 1`] = `
[
  {
    "managerData": {
      "lernaClient": "yarn",
      "lernaJsonFile": "lerna.json",
      "lernaPackages": [
        "oldpackages/*",
      ],
      "workspacesPackages": [
        "packages/*",
      ],
    },
    "packageFile": "package.json",
  },
  {
    "hasWorkspaces": true,
    "managerData": {
      "hasPackageManager": undefined,
      "lernaClient": "yarn",
      "lernaJsonFile": "lerna.json",
      "packageJsonName": "@org/a",
      "yarnZeroInstall": undefined,
    },
    "npmLock": undefined,
    "npmrc": undefined,
    "packageFile": "packages/a/package.json",
    "skipInstalls": undefined,
    "yarnLock": undefined,
  },
  {
    "hasWorkspaces": true,
    "managerData": {
      "hasPackageManager": undefined,
      "lernaClient": "yarn",
      "lernaJsonFile": "lerna.json",
      "packageJsonName": "@org/b",
      "yarnZeroInstall": undefined,
    },
    "npmLock": undefined,
    "npmrc": undefined,
    "packageFile": "packages/b/package.json",
    "skipInstalls": undefined,
    "yarnLock": undefined,
  },
]
`;
